Japanese translation (#76)
* Adding pilot Japanese translation

* Adding pilot Japanese translation

* new HPO contains portuguese, fixed code so it does not output error. In Japanese it said the instructions were given in German, probably a copy paste error, fixed

* got rid of leftover German translations using DeepL

---------

Co-authored-by: Leonardo macOS <leonardochimirri94@gmail.com>