@@ -294,7 +294,7 @@ public class PpktIndividualGerman implements PPKtIndividualInfoGenerator {
         if (components.isEmpty()) {
             ymd = "";
         } else if (components.size() == 1) {
-            ymd = components.get(0);
+            ymd = components.getFirst();
         } else if (components.size() == 2) {
             ymd = String.format("%s und %s", components.get(0), components.get(1));
         } else {
